# SectorCity

./: .gitattributes  .gitignore  .npmrc  .prettierignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spike-hybrid.html  spike-webgpu.html  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: SectorCity-backlog.md  SectorCity-tech.md  SectorCity-tz.md
src/: App.svelte  app.css  main.ts  three-webgpu-shims.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  gpu.rs  lib.rs  main.rs  state.rs
src-tauri/src/classify/: data.rs  mod.rs  rules.rs
src-tauri/src/ipc/: commands.rs  contract.rs  mock.rs  mod.rs
src-tauri/src/scan/: mod.rs  snapshot.rs
src/lib/: cleanup.ts  format.ts  hotkeys.ts
src/lib/components/: .gitkeep  Breadcrumbs.svelte  CategoryEmpty.svelte  CategoryGlyph.svelte  CleanupConfirm.svelte  CleanupPanel.svelte  ContextMenu.svelte  FilterPanel.svelte  Footer.svelte  Header.svelte  HiddenPanel.svelte  Hotkeys.svelte  HotkeysHelp.svelte  Icon.svelte  Legend.svelte  LegendPanel.svelte  NodeCard.svelte  Scene.svelte  SearchBox.svelte  SettingsPanel.svelte  StarGlyph.svelte  StatusOverlay.svelte  Toast.svelte
src/lib/ipc/: actions.ts  commands.ts  contract.ts
src/lib/store/: index.ts  mode.ts  settings.ts  ui.ts
src/lib/styles/: fonts.css  themes.css  tokens.css
src/lib/three/: .gitkeep  buildings.ts  city.test.ts  city.ts  cursor-light-shared.ts  home.ts  navigator.ts  (+12 more)
src/spike/: webgpu-domes.ts  webgpu-hybrid.ts
(+3 files in other folders)
